apps/ingress-controller-kong/apple.yaml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
#  namespace: example-kubernetes
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
#  namespace: example-kubernetes
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image
